[package]
name = "spectacles-proxy"
version = "0.1.0"
authors = ["Will Nelson <will@pleb.xyz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "proxy"
required-features = ["redis-ratelimiter"]

[dependencies]
anyhow = "1.0"
env_logger = "0.7"
http = "0.2"
humantime = "2.0"
lazy_static = "1.4"
log = "0.4"
rmp-serde = "0.14"
rustacles-brokers = { git = "https://github.com/spec-tacles/rustacles" }
rustacles-model = { git = "https://github.com/spec-tacles/rustacles" }
serde = "1.0"
serde_bytes = "0.11"
serde_json = "1.0"
serde_repr = "0.1"
serde_with = "1.4"
tokio = { version = "0.2", features = ["rt-core", "rt-threaded", "signal", "stream", "sync", "time"] }
toml = "0.5"
uriparse = "0.6"

[dependencies.redis]
version = "0.17"
optional = true

[dependencies.reqwest]
version = "0.10"
features = ["json", "rustls-tls"]
default-features = false

[features]
default = []
redis-ratelimiter = ["redis"]

[dev-dependencies]
mockito = "0.27"

[dev-dependencies.tokio]
version = "0.2"
features = ["macros"]
