[package]
name = "spectacles-proxy"
version = "0.1.0"
authors = ["Will Nelson <will@pleb.xyz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "proxy"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
bytes = { version = "1.0", features = ["serde"] }
env_logger = "0.7"
http = "0.2"
humantime = "2.0"
humantime-serde = "1.0"
lazy_static = "1.4"
log = "0.4"
prometheus = { version = "0.11", optional = true }
rmp-serde = "0.14"
rustacles-brokers = { git = "https://github.com/spec-tacles/rustacles" }
rustacles-model = { git = "https://github.com/spec-tacles/rustacles" }
serde = "1.0"
serde_repr = "0.1"
tokio-stream = "0.1"
toml = "0.5"
uriparse = "0.6"

[dependencies.tokio]
version = "1.0"
features = ["rt-multi-thread", "signal", "sync", "time", "macros"]

[dependencies.redis]
version = "0.19"
optional = true
features = ["tokio-comp"]

[dependencies.reqwest]
version = "0.11"
features = ["rustls-tls"]
default-features = false

[dependencies.warp]
git = "https://github.com/seanmonstar/warp.git"
optional = true

[features]
default = []
redis-ratelimiter = ["redis"]
metrics = ["prometheus", "warp"]

[dev-dependencies]
mockito = "0.27"
