[package]
name = "spectacles-proxy"
version = "0.1.0"
authors = ["Will Nelson <will@pleb.xyz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "proxy"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
bytes = { version = "1.0", features = ["serde"] }
futures = "0.3"
http = "0.2"
humantime = "2.0"
humantime-serde = "1.0"
lazy_static = "1.4"
prometheus = { version = "0.11", optional = true }
redust = { version = "0.3", features = ["script", "model", "pool"] }
rmp-serde = "0.14"
rustacles-brokers = { git = "https://github.com/spec-tacles/rustacles", rev = "f6cce1f", features = ["redis-broker"] }
serde = "1.0"
serde_repr = "0.1"
tokio-stream = "0.1"
toml = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uriparse = "0.6"

[dependencies.tokio]
version = "1.0"
features = ["rt-multi-thread", "time", "macros"]

[dependencies.reqwest]
version = "0.11"
features = ["rustls-tls"]
default-features = false

[dependencies.warp]
git = "https://github.com/seanmonstar/warp.git"
optional = true

[features]
default = []
redis-ratelimiter = []
metrics = ["prometheus", "warp"]

[dev-dependencies]
mockito = "0.27"
test-log = { version = "0.2", default-features = false, features = ["trace"] }
tracing = { version = "0.1", default-features = false }
