[package]
name = "spectacles-proxy"
version = "0.1.0"
authors = ["Will Nelson <will@pleb.xyz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
log = "0.4"
serde = "1.0"
serde_json = "1.0"
tokio = { version = "0.2", features = ["blocking", "rt-core", "stream", "sync"] }
uriparse = "0.6"

redis = { version = "0.16", optional = true }

[dependencies.reqwest]
version = "0.10"
features = ["json", "rustls-tls"]
default-features = false

[features]
default = []
redis-ratelimiter = [
	"redis",
]

[dev-dependencies]
env_logger = "0.7"

[dev-dependencies.tokio]
version = "0.2"
features = [
	"macros",
	"time",
]
